--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,38 +8,47 @@
     <title>Google</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div id="headerRegion">
-        <div class="top">
+        <span class="div1">
             <a href="#">
-                    <h3>Gmail</h3>
-                </a>
-                <a href="#">
-                    <h3>Images</h3>
-                </a>
-                <a id="icon" href="#">
-                    <div></div>
-                </a>
-                <a id="imgicon" href="#">
-                    <img src="" alt="">
-                </a>
-        </div>
+                <h3>About</h3>
+            </a>
+            <a href="#">
+                <h3>Store</h3>
+            </a>
+        </span>
+
+        <span class="top">
+            <a href="#">
+                <h3>Gmail</h3>
+            </a>
+            <a href="#">
+                <h3>Images</h3>
+            </a>
+            <a class="icon" href="#">
+                <div><img src="apps.png" alt=""></div>
+            </a>
+            <a class="imgicon" href="#">
+            </a>
+        </span>
     </div>
     <div id="centerRegion">
         <div class="subRegion">
-            <h1><span class="fCol">G</span><span class="sColor">o</span><span class="tColor">o</span><span class="fCol">g</span><span class="lColor">l</span><span class="sColor">e</span></h1>
+            <div class="gimg"></div>
             <div class="form">
                 <input id="textField" type="text">
 
-                <div class="search"><a href="#"><img src="searchicon.png" alt=""></a></div>
+                <a href="#"><img width="25px" src="search.png" alt=""></a>
 
-                <div class="voice"><a href="#"><img width="20px" src="mic.png" alt=""></a></div>
+                <a href="#"><img width="15px" src="mic.png" alt=""></a>
             </div>
             <div class="buttons">
                 <button class="button1"><a href="#">Google Search</a></button>
                 <button class="button2"><a href="#">I'm Feeling Lucky</a></button>
             </div>
-            
+
         </div>
     </div>
     <div id="belowCenter">
@@ -51,23 +61,24 @@
     </div>
     <div id="footerRegion">
         <h2>Nigeria</h2>
-        <div>
+        <span class="span1">
             <a href="#">Advertising</a>
             <a href="#">Business</a>
             <a href="#">About</a>
             <a href="#">How Search works</a>
-        </div>
+        </span>
 
-        <div>
+        <span class="span2">
             <a href="#">Privacy</a>
             <a href="#">Terms</a>
             <a href="#">Settings</a>
-        </div>
-       
+        </span>
+
 
     </div>
 
 
     <script src="script.js"></script>
 </body>
+
 </html>
