--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h3>Store</h3>
             </a>
         </span>
-
+        
         <span class="top">
             <a href="#">
                 <h3>Gmail</h3>
@@ -36,7 +36,10 @@
     </div>
     <div id="centerRegion">
         <div class="subRegion">
-            <div class="gimg"></div>
+            <div class="gimg">
+                <img src="google.png" width="272px" height="90px" alt="">
+            </div>
+            
             <div class="form">
                 <input id="textField" type="text">
 
