--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
         </div>
 
         <section class="container" id="belowCenter">
-            Google offered in:
-            <a href="">Hausa</a>
-            <a href="">Igbo</a>
-            <a class="difFont" href="">Èdè Yorùbá</a>
-            <a href="">Nigerian Pidgin</a>
+            <span class="Gtext">Google offered in:</span>
+            <span class="Glang">
+                <a href="">Hausa</a>
+                <a href="">Igbo</a>
+                <a class="difFont" href="">Èdè Yorùbá</a>
+                <a href="">Nigerian Pidgin</a>
+            </span>
 
         </section>
     </main>
@@ -70,13 +72,18 @@
     <footer id="footerRegion">
         <h2>Nigeria</h2>
         <div class="container">
+            <span class="Nspan">
+                <a href="#">Settings</a>
+                <a href="#">Privacy</a>
+                <a href="#">Terms</a>
+            </span>
             <span class="span1">
                 <a href="#">Advertising</a>
                 <a href="#">Business</a>
                 <a href="#">About</a>
                 <a href="#">How Search works</a>
             </span>
-            
+
             <span class="span2">
                 <a href="#">Privacy</a>
                 <a href="#">Terms</a>
