--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
     <main class="container" id="centerRegion">
         <div class="subRegion">
             <div class="gimg">
-                <img src="google.png" width="272px" height="90px" alt="Google">
+                <img src="google.png" width="210px" height="70px" alt="Google">
             </div>
 
             <div class="form">
                 <input id="textField" type="text">
 
-                <a href="#"><img width="25px" src="search.png" alt=""></a>
+                <a class="search" href="#"><img width="25px" src="search.png" alt="search"></a>
 
-                <a href="#"><img width="15px" src="mic.png" alt=""></a>
+                <a class="voiceSearch" href="#"><img width="15px" src="mic.png" alt="voice-search"></a>
             </div>
             <div class="buttons">
                 <button class="button1"><a href="#">Google Search</a></button>
