--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 <body>
     <header id="headerRegion">
         <nav class="container">
+            <span class="topLeft">
+                <button class="burger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+                <a class="all" href="#"><h3>All</h3></a>
+                <a class="images" href="#"><h3>Images</h3></a>
+            </span>
+            
             <span class="top">
                 <a class="gm" href="#">
                     <h3>Gmail</h3>
@@ -95,7 +105,7 @@
 
 
     <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
@@ -104,7 +114,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="script.js"></script> -->
 </body>
 
 </html>
