--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
         <nav class="container">
             <span class="topLeft">
                 <button class="burger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <div></div>
+                    <div></div>
+                    <div></div>
                 </button>
-                <a class="all" href="#"><h3>All</h3></a>
-                <a class="images" href="#"><h3>Images</h3></a>
+                <span class="links">
+                    <a class="all" href="#"><h3 class="active">ALL</h3></a>
+                    <a class="images" href="#"><h3>IMAGES</h3></a>
+                </span>
+               
             </span>
             
             <span class="top">
