--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header id="headerRegion">
         <nav class="container">
             <span class="topLeft">
-                <button id="burger" data-target="#menu">
+                <button id="burger">
                     <div></div>
                     <div></div>
                     <div></div>
