--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Google</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -21,10 +21,10 @@
                 </button>
                 <span class="links">
                     <a class="all" href="#">
-                        <h3 class="active">ALL</h3>
+                        <h3 class="allH3">ALL</h3>
                     </a>
                     <a class="images" href="#">
-                        <h3>IMAGES</h3>
+                        <h3 class="imagesH3">IMAGES</h3>
                     </a>
                 </span>
 
@@ -38,7 +38,7 @@
                     <h3>Images</h3>
                 </a>
                 <a class="icon" href="#">
-                    <div><img src="apps.png" alt=""></div>
+                    <div><img src="./images/apps.png" alt=""></div>
                 </a>
                 <a class="imgicon" href="#">
                 </a>
@@ -50,7 +50,7 @@
 
     <div class="clear-fix"></div>
     <div id="menu">
-        <img id="menuG" src="google.png" width="90px" height="30px" alt="Google">
+        <img id="menuG" src="./images/google.png" width="90px" height="30px" alt="Google">
         <ul>
             <li>
                 <a href="#">
@@ -123,15 +123,15 @@
     <main class="container" id="centerRegion">
         <div class="subRegion">
             <div class="gimg">
-                <img src="google.png" width="210px" height="70px" alt="Google">
+                <img src="./images/google.png" width="160px" height="55px" alt="Google">
             </div>
 
             <div class="form">
                 <input id="textField" type="text">
 
-                <a class="search" href="#"><img width="25px" src="search.png" alt="search"></a>
+                <a class="search" href="#"><img width="25px" src="./images/search.png" alt="search"></a>
 
-                <a class="voiceSearch" href="#"><img width="15px" src="mic.png" alt="voice-search"></a>
+                <a class="voiceSearch" href="#"><img width="15px" src="./images/mic.png" alt="voice-search"></a>
             </div>
             <div class="buttons">
                 <button class="button1"><a href="#">Google Search</a></button>
@@ -191,7 +191,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>-->
-    <script src="nav-slide.js"></script> 
+    <script src="./js/nav-slide.js"></script> 
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
