--- a/index.html
+++ b/index.html
@@ -54,65 +54,64 @@
         <ul>
             <li>
                 <a href="#">
-                    <i class="fa fa-home"></i>
+                    <img src="./images/nav/home_icon.svg" width="24px" height="24px" alt="">
                     <span>Home</span>
                 </a>
             </li>
 
             <li>
                 <a href="#">
-                    <i class="fa fa-history"></i>
+                    <img src="./images/nav/search_activity_icon.svg" width="24px" height="24px" alt="">
                     <span>Search activity</span>
                 </a>
             </li>
-
             <li>
                 <a href="#">
-                    <i class="fa fa-book"></i>
+                    <img src="./images/nav/save_icon.svg" width="24px" height="24px" alt="">
                     <span>Collections</span>
                 </a>
             </li>
 
             <li>
                 <a href="#">
-                    <i class="fa fa-toggle-off"></i>
+                    <img src="./images/nav/manage_searches_icon.png" width="24px" height="24px" alt="">
                     <span>Offline searches</span>
                 </a>
             </li>
 
-            <div id="borderLine"></div>
+            <hr>
 
             <li>
                 <a href="#">
-                    <i class="fa fa-cog"></i>
+                    <img src="./images/nav/settings_icon.svg" width="24px" height="24px" alt="">
                     <span>Settings</span>
                 </a>
             </li>
 
             <li>
                 <a href="#">
-                    <i class="fa fa-shield"></i>
+                    <img src="./images/nav/privacy_advisor_icon.svg" width="24px" height="24px" alt="">
                     <span>Your data in Search</span>
                 </a>
             </li>
 
             <li>
                 <a href="#">
-                    <i class="fa fa-search"></i>
+                    <img src="./images/nav/how_search_works_icon.svg" width="24px" height="24px" alt="">
                     <span>How Search works</span>
                 </a>
             </li>
 
             <li>
                 <a href="#">
-                    <i class="fa fa-question-circle"></i>
+                    <img src="./images/nav/help_icon.svg" width="24px" height="24px" alt="">
                     <span>Help</span>
                 </a>
             </li>
 
             <li>
                 <a href="#">
-                    <i class="fa fa-comment"></i>
+                    <img src="./images/nav/feedback_icon.svg" width="24px" height="24px" alt="">
                     <span>Send feedback</span>
                 </a>
             </li>
@@ -191,7 +190,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>-->
-    <script src="./js/nav-slide.js"></script> 
+    <script src="./js/nav-slide.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
